--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -251,6 +251,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="icGenre.vb" />
+    <Compile Include="ImageModifer.vb" />
     <Compile Include="linkedimage.vb">
       <SubType>Component</SubType>
     </Compile>
