--- a/miptvupdate/miptvupdate.vbproj
+++ b/miptvupdate/miptvupdate.vbproj
@@ -37,6 +37,7 @@
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="miplibfc, Version=1.0.1.2800, Culture=neutral, PublicKeyToken=8be0b0a92da598ee, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
