modified getting started wizard for all types.. added media read of display aspect ratio, moved .nfo first run to module and pointed everything to that, fixed overwrite issue with .nfo files, updated media tag string, added additional format checks and field for hd flagging support

--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -269,6 +269,7 @@
     </Compile>
     <Compile Include="MediaInfo.vb" />
     <Compile Include="modFileUtils.vb" />
+    <Compile Include="modNfoData.vb" />
     <Compile Include="modStringUtils.vb" />
     <Compile Include="movie2.vb" />
     <Compile Include="moviesDataSet.Designer.vb">
