--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -84,6 +84,7 @@
     </Reference>
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="TabControlEX, Version=0.0.3216.38616, Culture=neutral, PublicKeyToken=1db242dc828e4b4e">
@@ -132,6 +133,12 @@
       <DependentUpon>dlbPreviewPrintMediaImage.vb</DependentUpon>
     </Compile>
     <Compile Include="dlbPreviewPrintMediaImage.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dlgCompressResizeMoviePoster.Designer.vb">
+      <DependentUpon>dlgCompressResizeMoviePoster.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgCompressResizeMoviePoster.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgConfiguration.Designer.vb">
@@ -410,6 +417,9 @@
     <EmbeddedResource Include="dlbPreviewPrintMediaImage.resx">
       <DependentUpon>dlbPreviewPrintMediaImage.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCompressResizeMoviePoster.resx">
+      <DependentUpon>dlgCompressResizeMoviePoster.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgConfiguration.resx">
       <DependentUpon>dlgConfiguration.vb</DependentUpon>
