--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -172,6 +172,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlobject.vb" />
+    <Compile Include="frmsimple.Designer.vb">
+      <DependentUpon>frmsimple.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmsimple.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="htbackdrops.vb" />
     <Compile Include="icStudio.vb" />
     <Compile Include="dlgMovieStudioSelect.Designer.vb">
@@ -483,6 +489,9 @@
     <EmbeddedResource Include="Explorer1.resx">
       <DependentUpon>Explorer1.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmsimple.resx">
+      <DependentUpon>frmsimple.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GettingStartedWizard.resx">
       <DependentUpon>GettingStartedWizard.vb</DependentUpon>
