2878 added skin based tagging support for media images fixed error when clicking on trailer before loading movies fixed sorting not working for movies in file level added missing media images filter (folder level only) filelevel movies no longer attempt to download or display media images (folder level is required) added media images to autopilot added season level tv show fanart support

--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -323,6 +323,12 @@
     <Compile Include="saveaswhaticontype.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="savetvfanartaswhat.Designer.vb">
+      <DependentUpon>savetvfanartaswhat.vb</DependentUpon>
+    </Compile>
+    <Compile Include="savetvfanartaswhat.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="selectMovie.Designer.vb">
       <DependentUpon>selectMovie.vb</DependentUpon>
     </Compile>
@@ -586,6 +592,9 @@
     <EmbeddedResource Include="saveaswhaticontype.resx">
       <DependentUpon>saveaswhaticontype.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="savetvfanartaswhat.resx">
+      <DependentUpon>savetvfanartaswhat.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="selectMovie.resx">
       <DependentUpon>selectMovie.vb</DependentUpon>
