--- a/miptvupdate/miptvupdate.vbproj
+++ b/miptvupdate/miptvupdate.vbproj
@@ -32,7 +32,7 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\..\..\..\..\Program Files\movieinfoplus\</OutputPath>
+    <OutputPath>C:\Program Files\movieinfoplus\</OutputPath>
     <DocumentationFile>miptvupdate.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
