--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -273,6 +273,7 @@
     </Compile>
     <Compile Include="MediaInfo.vb" />
     <Compile Include="modFileUtils.vb" />
+    <Compile Include="modFindSimilarMovie.vb" />
     <Compile Include="modNfoData.vb" />
     <Compile Include="modStringUtils.vb" />
     <Compile Include="movie2.vb" />
