--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -168,6 +168,12 @@
     <Compile Include="dlgMusicSortWizard.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgPickThumbs.Designer.vb">
+      <DependentUpon>dlgPickThumbs.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgPickThumbs.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgPreCacheStarting.Designer.vb">
       <DependentUpon>dlgPreCacheStarting.vb</DependentUpon>
     </Compile>
@@ -476,6 +482,9 @@
     <EmbeddedResource Include="dlgMusicSortWizard.resx">
       <DependentUpon>dlgMusicSortWizard.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgPickThumbs.resx">
+      <DependentUpon>dlgPickThumbs.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgPreCacheStarting.resx">
       <DependentUpon>dlgPreCacheStarting.vb</DependentUpon>
