--- a/miptvupdate/miptvupdate.vbproj
+++ b/miptvupdate/miptvupdate.vbproj
@@ -7,7 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4B43D2A1-20E1-4661-ACD8-712D9A5CDDFE}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>miptvupdate.Module1</StartupObject>
+    <StartupObject>miptvupdate.cmdlinetvshowupdate</StartupObject>
     <RootNamespace>miptvupdate</RootNamespace>
     <AssemblyName>miptvupdate</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -66,7 +66,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.vb" />
+    <Compile Include="cmdlinetvshowupdate.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
