--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{26EF0B6C-B3C3-4661-99AE-1A7540CABC4E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -71,10 +71,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ComponentFactory.Krypton.Toolkit, Version=3.0.10.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\movieinfoplus\ComponentFactory.Krypton.Toolkit.dll</HintPath>
-    </Reference>
+    <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.0.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL" />
     <Reference Include="miplibfc, Version=2.0.1.2862, Culture=neutral, PublicKeyToken=8be0b0a92da598ee, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Resources\miplibfc.dll</HintPath>
@@ -181,6 +178,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlobject.vb" />
+    <Compile Include="Form1.Designer.vb">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="htbackdrops.vb" />
     <Compile Include="icStudio.vb" />
     <Compile Include="dlgMovieStudioSelect.Designer.vb">
@@ -502,6 +505,9 @@
     <EmbeddedResource Include="Explorer1.resx">
       <DependentUpon>Explorer1.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GettingStartedWizard.resx">
       <DependentUpon>GettingStartedWizard.vb</DependentUpon>
