--- a/miptvupdate/miptvupdate.vbproj
+++ b/miptvupdate/miptvupdate.vbproj
@@ -23,7 +23,7 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\Program Files\mediainfoplus\</OutputPath>
     <DocumentationFile>miptvupdate.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
@@ -32,7 +32,7 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>C:\Program Files\movieinfoplus\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\Program Files\mediainfoplus\</OutputPath>
     <DocumentationFile>miptvupdate.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
