--- a/movieinfoplus/movieinfoplus.vbproj
+++ b/movieinfoplus/movieinfoplus.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{26EF0B6C-B3C3-4661-99AE-1A7540CABC4E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -52,7 +52,7 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\..\..\..\..\..\..\..\Program Files\movieinfoplus\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\Program Files\mediainfoplus\</OutputPath>
     <DocumentationFile>mediainfoplus.xml</DocumentationFile>
     <NoWarn>
     </NoWarn>
@@ -63,12 +63,13 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>C:\Program Files\movieinfoplus\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\Program Files\mediainfoplus\</OutputPath>
     <DocumentationFile>mediainfoplus.xml</DocumentationFile>
     <NoWarn>
     </NoWarn>
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
     <DebugSymbols>true</DebugSymbols>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.0.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e, processorArchitecture=MSIL" />
@@ -178,12 +179,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlobject.vb" />
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Form1.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="htbackdrops.vb" />
     <Compile Include="icStudio.vb" />
     <Compile Include="dlgMovieStudioSelect.Designer.vb">
@@ -505,9 +500,6 @@
     <EmbeddedResource Include="Explorer1.resx">
       <DependentUpon>Explorer1.vb</DependentUpon>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GettingStartedWizard.resx">
       <DependentUpon>GettingStartedWizard.vb</DependentUpon>
